<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/matches"
        android:enabled="true"
        android:title="@string/matches"
        android:icon="@drawable/ic_match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/teams"
        android:enabled="true"
        android:title="@string/teams"
        android:icon="@drawable/ic_teams"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorite_match"
        android:enabled="true"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_match"
        app:showAsAction="ifRoom"/>

</menu>
