<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="match_date" type="id" />
    <item name="home_team_name" type="id" />
    <item name="match_score" type="id" />
    <item name="away_team_name" type="id" />
    <item name="last_match_list" type="id" />
    <item name="next_match_list" type="id" />
    <item name="fav_match_list" type="id" />
    <item name="favorite_item" type="id" />
    <item name="swipe_refresh_fav_match" type="id" />
    <item name="spinner" type="id" />
    <item name="list_team" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="tab_match" type="id" />
    <item name="viewpager_match" type="id" />
    <item name="tab_fav" type="id" />
    <item name="viewpager_fav" type="id" />
    <item name="list_players" type="id" />
    <item name="player_thumb" type="id" />
    <item name="player_name" type="id" />
    <item name="player_position" type="id" />
    <item name="match_time" type="id" />
    <item name="fav_team_list" type="id" />
    <item name="swipe_refresh_fav_team" type="id" />
</resources>