<resources>
    <string name="app_name">FB Match by Fatimazza</string>

    <string name="matches">Matches</string>
    <string name="tab_last_match">Last Match</string>
    <string name="tab_next_match">Next Match</string>
    <string name="intent_event">event</string>
    <string name="date_format">EEE, dd MMM yyyy</string>
    <string name="old_time_format">hh:mm:ssZ</string>
    <string name="new_time_format">HH:mm</string>

    <string name="detail_goals">Goals</string>
    <string name="detail_shots">Shots</string>
    <string name="detail_lineups">Lineups</string>
    <string name="detail_goal_keeper">Goal Keeper</string>
    <string name="detail_defense">Defense</string>
    <string name="detail_midfield">Midfield</string>
    <string name="detail_forward">Forward</string>
    <string name="detail_subtitues">Subtitues</string>

    <string name="dummy_date">Sat, 22 Sep 2008</string>
    <string name="dummy_time">23:30</string>
    <string name="dummy_home_team">Team A</string>
    <string name="dummy_away_team">Team B</string>
    <string name="dummy_score">1 vs 1</string>

    <string name="favorites">Favorites</string>
    <string name="fav_matches">Match</string>
    <string name="fav_teams">Team</string>
    <string name="team_detail">Team Detail</string>
    <string name="favorite_added">Added to favorite</string>
    <string name="favorite_removed">Removed from favorite</string>

    <string name="intent_id">id</string>
    <string name="intent_favorite">favorite</string>

    <string name="teams">Teams</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <string name="overview">Overview</string>
    <string name="players">Players</string>

    <string name="player_weight">Weight (Kg)</string>
    <string name="player_height">Height (m)</string>

    <string name="search">Search</string>
    <string name="search_match">Search Match</string>

</resources>
